# py-fnvhash-c

./: .gitattributes  .gitignore  README.md  rename.py  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish-win.yml  python-publish.yml
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: sidebarlinks.html
docs/source/api_manual/: filterclass.rst  moduleinterface.rst
docs/source/user_guide/: bloomfilter.rst  cityhash.rst  quickstart.rst
fnvhash-c/: __init__.py
fnvhash_c/: __init__.py  bfilt.py  fnvlib.py
misc/: fnvlib.cp38-win_amd64.pyd
src/: cityhash.cpp  cityhash_setup.py  lib.pyx  lib_setup.py
tests/: fnvhash.py  test_bloomfilter.py  test_cityhash.py  test_converter.py  test_fnvhash.py  test_import.py  utils.py
